--- a/k8s/prod/cluster-00-overlay/kustomization.yaml
+++ b/k8s/prod/cluster-00-overlay/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
   - ../../namespaces/admin/fluxcloud
   - ../../namespaces/admin/kube-slack
   - ../../namespaces/admin/keyvault-flexvol
+  - ../../namespaces/admin/node-problem-detector
   - ../../namespaces/admin/traefik
   - ../../namespaces/kured
   - ../../namespaces/neuvector
