Add kube-system to platform-engineering

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -16,6 +16,7 @@ k8s/prod/ @hmcts/production-apps-approvals
 k8s/common/ @hmcts/platform-engineering @hmcts/devops
 k8s/namespaces/ @hmcts/platform-engineering @hmcts/devops
 k8s/**/cluster-*-overlay/ @hmcts/platform-engineering
+k8s/prod/*/kube-system/ @hmcts/platform-engineering
 k8s/**/common/monitoring/ @hmcts/platform-engineering
 
 ### Next team
