PCQ-1234 Update code owners for PCQ team

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -257,12 +257,9 @@ k8s/perftest/common/xui/share-case.yaml @hmcts/xui
 ### PCQ
 k8s/**/common/pcq/namespace.yaml @hmcts/pcq-admins
 k8s/**/common/pcq/identity.yaml @hmcts/pcq-admins
-k8s/aat/common/pcq/pcq-frontend.yaml @hmcts/pcq-admins
-k8s/aat/common/pcq/pcq-backend.yaml @hmcts/pcq-admins
-k8s/demo/common/pcq/pcq-frontend.yaml @hmcts/pcq-admins
-k8s/demo/common/pcq/pcq-backend.yaml @hmcts/pcq-admins
-k8s/aat/cluster-00/pcq/pcq-consolidation-service.yaml @hmcts/pcq-admins
-k8s/aat/cluster-01/pcq/pcq-consolidation-service.yaml @hmcts/pcq-admins
+k8s/**/common/pcq/pcq-frontend.yaml @hmcts/pcq-admins
+k8s/**/common/pcq/pcq-backend.yaml @hmcts/pcq-admins
+k8s/**/cluster-*/pcq/pcq-consolidation-service.yaml @hmcts/pcq-admins
 
 ### RSE
 k8s/demo/common/rse-istio-poc/** @hmcts/rse
