--- a/k8s/perftest/common/ccd/case-activity-api.yaml
+++ b/k8s/perftest/common/ccd/case-activity-api.yaml
@@ -25,3 +25,4 @@ spec:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
       enableKeyVaults: true
+      test: test
