Revert "PCQ-1234 Run Consolidation Service hourly"

--- a/k8s/prod/cluster-00/pcq/pcq-consolidation-service.yaml
+++ b/k8s/prod/cluster-00/pcq/pcq-consolidation-service.yaml
@@ -17,8 +17,7 @@ spec:
     version: 0.0.16
   values:
     job:
-      schedule: "0 * * * *"
-      # schedule: "0 18 1-31/2 * *"
+      schedule: "0 18 1-31/2 * *"
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/pcq/consolidation-service:prod-ae7c1afa
       environment:
