Set SSCS Bulk Scanning urls as empty in prod (#3993)

--- a/k8s/prod/common/bsp/bulk-scan-processor.yaml
+++ b/k8s/prod/common/bsp/bulk-scan-processor.yaml
@@ -20,7 +20,7 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: bulk-scan-processor
-    version: 0.2.29
+    version: 0.2.30
   values:
     java:
       replicas: 2
@@ -39,6 +39,7 @@ spec:
         NO_NEW_ENVELOPES_TASK_ENABLED: true
         OCR_VALIDATION_URL_DIVORCE: ""
         OCR_VALIDATION_URL_FINREM: ""
+        OCR_VALIDATION_URL_SSCS: ""
         DELETE_COMPLETE_FILES_CRON: "0 0/10 * * * *"
         STORAGE_BLOB_LEASE_TIMEOUT: 60
       testsConfig:
