--- a/k8s/prod/common/bsp/bulk-scan-orchestrator.yaml
+++ b/k8s/prod/common/bsp/bulk-scan-orchestrator.yaml
@@ -20,7 +20,7 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: bulk-scan-orchestrator
-    version: 0.2.11
+    version: 0.2.12
   values:
     java:
       replicas: 2
@@ -30,6 +30,7 @@ spec:
         IDAM_API_URL: "https://idam-api.platform.hmcts.net"
         TRANSFORMATION_URL_DIVORCE: ""
         TRANSFORMATION_URL_FINREM: ""
+        TRANSFORMATION_URL_SSCS: ""
         DELETE_ENVELOPES_DLQ_MESSAGES_CRON: "0 30 0/2 * * *"
         DELETE_ENVELOPES_DLQ_MESSAGES_TTL: "PT72H"
       testsConfig:
