--- a/k8s/ithc/common/ccd/definition-store-api.yaml
+++ b/k8s/ithc/common/ccd/definition-store-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ccd
   annotations:
     flux.weave.works/automated: "false"
-    flux.weave.works/tag.java: glob:pr-619-*
+    flux.weave.works/tag.java: glob:prod-*
 spec:
   releaseName: ccd-definition-store-api
   rollback:
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ccd/definition-store-api:pr-619-573c5374
+      image: hmctspublic.azurecr.io/ccd/definition-store-api:prod-e19c9f21
       environment:
         DEFINITION_STORE_DB_MAX_POOL_SIZE: 25
         IDAM_USER_URL: https://idam-api.ithc.platform.hmcts.net
