Move node-problem-detector to monitoring

--- a/k8s/namespaces/admin/node-problem-detector/node-problem-detector.yaml
+++ b/k8s/namespaces/admin/node-problem-detector/node-problem-detector.yaml
@@ -3,7 +3,7 @@ apiVersion: helm.fluxcd.io/v1
 kind: HelmRelease
 metadata:
   name: node-problem-detector
-  namespace: admin
+  namespace: monitoring
   annotations:
     fluxcd.io/automated: "true"
 spec:
