Fix namespace selector on node-problem-detector (#4020)

--- a/k8s/namespaces/monitoring/patches/sandbox/cluster-01/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/sandbox/cluster-01/prom-operator.yaml
@@ -24,7 +24,7 @@ spec:
               app.kubernetes.io/name: node-problem-detector
           namespaceSelector:
             matchNames:
-              - kube-system
+              - monitoring
           podMetricsEndpoints:
             - port: exporter
               path: /metrics
