Add alertmanager default receiver

--- a/k8s/namespaces/monitoring/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/prom-operator.yaml
@@ -85,7 +85,7 @@ spec:
           group_wait: "30s"
           group_interval: "5m"
           repeat_interval: "2h"
-          receiver: null  # default receiver
+          receiver: slack_alerting  # default receiver
           routes:
             - match:
                 alertname: Watchdog
