--- a/k8s/demo/common/probate/probate-frontend.yaml
+++ b/k8s/demo/common/probate/probate-frontend.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: probate
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: glob:pr-1167-*
+    flux.weave.works/tag.nodejs: glob:prod-*
 spec:
   releaseName: probate-frontend
   rollback:
