--- a/k8s/ithc/common/em/em-showcase.yaml
+++ b/k8s/ithc/common/em/em-showcase.yaml
@@ -15,16 +15,16 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: em-showcase
-    version: 1.1.6
+    version: 1.1.5
   values:
     nodejs:
       replicas: 1
       applicationInsightsInstrumentKey: "85dcdcdd-f333-47b1-9e2b-bd8fea0b00ce"
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/em/showcase:aat-a99d610a
+      image: hmctspublic.azurecr.io/em/showcase:pr-45-884d8fcc
       ingressHost: em-showcase-ithc.service.core-compute-ithc.internal
       environment:
-        VAR_T3: trigger7
+        VAR_T3: trigger8
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
