--- a/k8s/ithc/common/em/em-showcase.yaml
+++ b/k8s/ithc/common/em/em-showcase.yaml
@@ -21,10 +21,10 @@ spec:
       replicas: 1
       applicationInsightsInstrumentKey: "85dcdcdd-f333-47b1-9e2b-bd8fea0b00ce"
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/em/showcase:pr-45-884d8fcc
+      image: hmctspublic.azurecr.io/em/showcase:aat-a99d610a
       ingressHost: em-showcase-ithc.service.core-compute-ithc.internal
       environment:
-        VAR_T3: trigger9
+        VAR_T3: trigger10
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
