--- a/k8s/ithc/common/ccd/definition-store-api.yaml
+++ b/k8s/ithc/common/ccd/definition-store-api.yaml
@@ -24,6 +24,7 @@ spec:
       environment:
         DEFINITION_STORE_DB_MAX_POOL_SIZE: 25
         IDAM_USER_URL: https://idam-api.ithc.platform.hmcts.net
+        DUMMY: x
     global:
       environment: ithc
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
