--- a/k8s/demo/common/divorce/div-rfe.yaml
+++ b/k8s/demo/common/divorce/div-rfe.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: divorce
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.nodejs: glob:prod-*
+    flux.weave.works/tag.nodejs: glob:pr-447-*
 spec:
   releaseName: div-rfe
   rollback:
@@ -20,7 +20,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/div/rfe:prod-7de59676
+      image: hmctspublic.azurecr.io/div/rfe:pr-447-586a08c4
       ingressClass: traefik-no-proxy
       ingressHost: respond-divorce-aks.demo.platform.hmcts.net
       environment:
