--- a/k8s/prod/common/dm-store/dm-store.yaml
+++ b/k8s/prod/common/dm-store/dm-store.yaml
@@ -5,7 +5,7 @@ metadata:
   name: dm-store
   namespace: dm-store
   annotations:
-    fluxcd.io/automated: "true"
+    fluxcd.io/automated: "false"
     repository.fluxcd.io/java: java.image
     filter.fluxcd.io/java: glob:prod-*
 spec:
