--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -221,6 +221,7 @@ k8s/**/common/am/identity.yaml @hmcts/am-devs
 k8s/aat/common/am/accessmgmt-api.yaml @hmcts/am-devs
 k8s/perftest/common/am/accessmgmt-api.yaml @hmcts/am-devs
 k8s/aat/common/am/am-role-assignment-service.yaml @hmcts/am-devs
+k8s/aat/common/am/am-judicial-booking-service.yaml @hmcts/am-devs
 
 ## Ethos
 k8s/**/common/ethos/namespace.yaml @hmcts/ethos
