--- a/k8s/ithc/common/xui/webapp.yaml
+++ b/k8s/ithc/common/xui/webapp.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: xui
   annotations:
     fluxcd.io/automated: "true"
-    fluxcd.io/tag.nodejs: glob:ithc
+    fluxcd.io/tag.nodejs: glob:pr-530-fdb58547
 spec:
   releaseName: xui-webapp
   rollback:
@@ -20,7 +20,7 @@ spec:
     nodejs:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/xui/webapp:ithc
+      image: hmctspublic.azurecr.io/xui/webapp:pr-530-fdb58547
       ingressHost: manage-case.ithc.platform.hmcts.net
       environment:
         SERVICES_IDAM_LOGIN_URL: https://idam-web-public.ithc.platform.hmcts.net
