--- a/k8s/namespaces/monitoring/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/prom-operator.yaml
@@ -106,7 +106,7 @@ spec:
         receivers:
           - name: "slack_alerting"
             slack_configs:
-              - channel: prometheus-alerting
+              - channel: "prometheus-alerting-$CLUSTER_NAME"
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
 
     grafana:
