--- a/k8s/preview/cluster-00-overlay/kustomization.yaml
+++ b/k8s/preview/cluster-00-overlay/kustomization.yaml
@@ -6,9 +6,11 @@ bases:
   - ../../namespaces/admin/keyvault-flexvol
   - ../../namespaces/admin/traefik
   - ../../namespaces/kured
+  - ../../namespaces/keda
   - ../../namespaces/monitoring
   - ../../namespaces/admin/env-injector
   - ../../namespaces/knode-system
+  - ../../namespaces/admin/keda
 
 patchesStrategicMerge:
   #flux patches
@@ -23,6 +25,9 @@ patchesStrategicMerge:
 
   #kured patch
   - ../../namespaces/kured/patches/preview/cluster-00/kured.yaml
+
+  #osba patch
+  - ../../namespaces/osba/patches/demo/osba.yaml
 
   #prom-operator patch
   - ../../namespaces/monitoring/patches/preview/cluster-00/prom-operator.yaml
