--- a/k8s/namespaces/monitoring/patches/perftest/cluster-01/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/perftest/cluster-01/prom-operator.yaml
@@ -15,12 +15,13 @@ spec:
       ingress:
         hosts:
           - alertmanager-01.perftest.platform.hmcts.net
-        receivers:
-          - name: "slack_alerting"
-            slack_configs:
-              - channel: prometheus-alerting-perftest
-                text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
-          - name: "slack_critical"
-            slack_configs:
-              - channel: prometheus-critical-perftest
-                text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+        config:
+          receivers:
+            - name: "slack_alerting"
+              slack_configs:
+                - channel: prometheus-alerting-perftest
+                  text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+            - name: "slack_critical"
+              slack_configs:
+                - channel: prometheus-critical-perftest
+                  text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
