--- a/k8s/preview/cluster-01-overlay/kustomization.yaml
+++ b/k8s/preview/cluster-01-overlay/kustomization.yaml
@@ -6,7 +6,7 @@ bases:
   - ../../namespaces/admin/keyvault-flexvol
   - ../../namespaces/admin/traefik
   - ../../namespaces/kured
-  - ../../namespaces/keda
+  - ../../namespaces/osba
   - ../../namespaces/monitoring
   - ../../namespaces/admin/env-injector
   - ../../namespaces/knode-system
