--- a/k8s/namespaces/monitoring/patches/prod/cluster-00/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/prod/cluster-00/prom-operator.yaml
@@ -15,3 +15,18 @@ spec:
       ingress:
         hosts:
           - alertmanager-00.platform.hmcts.net
+      alertmanagerSpec:
+        configMaps:
+          - prometheus-prom-operator-prometheus-o-prometheus-rulefiles-nodelocaldns
+      config:
+        receivers:
+          - name: "slack_alerting"
+            slack_configs:
+              - channel: prometheus-alerting-prod
+                title: 'Prod-00 - {{ template "slack.default.title" . }}'
+                text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+          - name: "slack_critical"
+            slack_configs:
+              - channel: prometheus-critical-prod
+                title: 'Prod-00 - {{ template "slack.default.title" . }}'
+                text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
