restart ia-case-api

--- a/k8s/prod/common/ia/case-api.yaml
+++ b/k8s/prod/common/ia/case-api.yaml
@@ -24,7 +24,7 @@ spec:
       ingressHost: ia-case-api-prod.service.core-compute-prod.internal
       environment:
         IDAM_URL: https://idam-api.platform.hmcts.net
-        RESTART_ME: "Update due to vault change"
+        RESTART_ME: "Update due to vault Change"
       prometheus:
         enabled: true
     global:
