Break pipeline to prod, update chart and point Demo to Prod

--- a/k8s/prod/common/divorce/div-dn.yaml
+++ b/k8s/prod/common/divorce/div-dn.yaml
@@ -5,7 +5,7 @@ metadata:
   name: div-dn
   namespace: divorce
   annotations:
-    flux.weave.works/automated: "true"
+    flux.weave.works/automated: "false"
     flux.weave.works/tag.nodejs: glob:prod-*
 spec:
   releaseName: div-dn
@@ -15,7 +15,7 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: div-dn
-    version: 1.2.1
+    version: 1.2.2
   values:
     nodejs:
       replicas: 2
