--- a/k8s/demo/common/financial-remedy/finrem-ps.yaml
+++ b/k8s/demo/common/financial-remedy/finrem-ps.yaml
@@ -22,7 +22,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/finrem/ps:prod-89c69730
       environment:
-        GENERAL_APPLICATION_WITHOUT_NOTICE_FEE_KEYWORD: "without-notice"
+        GENERAL_APPLICATION_WITHOUT_NOTICE_FEE_KEYWORD: "GeneralAppWithoutNotice"
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
