--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -266,3 +266,7 @@ k8s/**/cluster-*/pcq/pcq-consolidation-service.yaml @hmcts/pcq-admins
 ### RSE
 k8s/demo/common/rse-istio-poc/** @hmcts/rse
 k8s/aat/common/rse/check.yaml @hmcts/rse
+
+### UCMC
+k8s/**/common/ucmc/namespace.yaml @hmcts/ucmc-admins
+k8s/**/common/ucmc/ucmc-service.yaml @hmcts/ucmc-admins
