--- a/k8s/demo/common/rpe/pdf-service.yaml
+++ b/k8s/demo/common/rpe/pdf-service.yaml
@@ -14,13 +14,11 @@ spec:
     retry: true
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    name: cmc-pdf-service
-    version: 0.4.2
+    name: rpe-pdf-service
+    version: 0.6.0
   values:
     java:
       replicas: 2
-      useInterpodAntiAffinity: true
-      applicationInsightsInstrumentKey: "883f99ad-3bb1-47a1-98b2-4ec6e86153dd"
-      image: hmctspublic.azurecr.io/cmc/pdf-service:prod-a2de9cd4
+      image: hmctspublic.azurecr.io/rpe/pdf-service:prod-6b7d621a
     global:
       environment: demo
