--- a/k8s/ithc/common/rpe/pdf-service.yaml
+++ b/k8s/ithc/common/rpe/pdf-service.yaml
@@ -14,13 +14,11 @@ spec:
     retry: true
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    name: cmc-pdf-service
-    version: 0.4.2
+    name: rpe-pdf-service
+    version: 0.6.0
   values:
     java:
       replicas: 2
-      useInterpodAntiAffinity: true
-      applicationInsightsInstrumentKey: "803c12b2-b954-4465-85bc-ad2cfc552c7f"
-      image: hmctspublic.azurecr.io/cmc/pdf-service:prod-a2de9cd4
+      image: hmctspublic.azurecr.io/rpe/pdf-service:prod-a2de9cd4
     global:
       environment: ithc
