--- a/k8s/perftest/common/rpe/pdf-service.yaml
+++ b/k8s/perftest/common/rpe/pdf-service.yaml
@@ -14,13 +14,12 @@ spec:
     retry: true
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
-    name: cmc-pdf-service
-    version: 0.4.2
+    name: rpe-pdf-service
+    version: 0.6.0
   values:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      applicationInsightsInstrumentKey: "50d6eba8-ffa5-4628-9622-87a8a8b8ab4f"
-      image: hmctspublic.azurecr.io/cmc/pdf-service:prod-a2de9cd4
+      image: hmctspublic.azurecr.io/rpe/pdf-service:prod-6b7d621a
     global:
       environment: perftest
