--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -268,5 +268,7 @@ k8s/demo/common/rse-istio-poc/** @hmcts/rse
 k8s/aat/common/rse/check.yaml @hmcts/rse
 
 ### UCMC
-k8s/**/common/ucmc/namespace.yaml @hmcts/ucmc-admins
-k8s/**/common/ucmc/ucmc-service.yaml @hmcts/ucmc-admins
+k8s/demo/common/ucmc/namespace.yaml @hmcts/ucmc-admins
+k8s/demo/common/ucmc/ucmc-service.yaml @hmcts/ucmc-admins
+k8s/aat/common/ucmc/namespace.yaml @hmcts/ucmc-admins
+k8s/aat/common/ucmc/ucmc-service.yaml @hmcts/ucmc-admins
