Add global flags

--- a/k8s/perftest/common/rpe/pdf-service.yaml
+++ b/k8s/perftest/common/rpe/pdf-service.yaml
@@ -23,3 +23,5 @@ spec:
       image: hmctspublic.azurecr.io/rpe/pdf-service:prod-6b7d621a
     global:
       environment: perftest
+      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+      enableKeyVaults: true
