--- a/k8s/aat/common/rpe/pdf-service.yaml
+++ b/k8s/aat/common/rpe/pdf-service.yaml
@@ -52,3 +52,5 @@ spec:
         image: hmctspublic.azurecr.io/rpe/pdf-service-test:prod-6b7d621a
     global:
       environment: aat
+      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+      enableKeyVaults: true
