--- a/k8s/ithc/common/rpe/pdf-service.yaml
+++ b/k8s/ithc/common/rpe/pdf-service.yaml
@@ -22,3 +22,5 @@ spec:
       image: hmctspublic.azurecr.io/rpe/pdf-service:prod-a2de9cd4
     global:
       environment: ithc
+      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+      enableKeyVaults: true
