added one more missing file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -270,3 +270,4 @@ k8s/aat/common/rse/check.yaml @hmcts/rse
 ### UCMC
 k8s/**/common/ucmc/namespace.yaml @hmcts/ucmc-admins
 k8s/aat/common/ucmc/ucmc-service.yaml @hmcts/ucmc-admins
+k8s/demo/common/ucmc/ucmc-service.yaml @hmcts/ucmc-admins
