update claimstore demo

--- a/k8s/demo/common/money-claims/cmc-demo.yaml
+++ b/k8s/demo/common/money-claims/cmc-demo.yaml
@@ -46,7 +46,8 @@ spec:
       java:
         releaseNameOverride: "cmc-demo-claim-store"
         image: hmctspublic.azurecr.io/cmc/claim-store:prod-208047d8
-        ingressHost: cmc-demo-claim-store-demo.service.core-compute-demo.internal
+        ingressClass: traefik-private
+        ingressHost: cmc-demo-claim-store.demo.platform.hmcts.net
         secrets:
           IDAM_S2S_AUTH_TOTP_SECRET:
             secretRef: claim-store-s2s-secret
