--- a/k8s/demo/common/ia/case-api.yaml
+++ b/k8s/demo/common/ia/case-api.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: ia
   annotations:
     flux.weave.works/automated: "true"
-    flux.weave.works/tag.java: glob:prod-*
+    flux.weave.works/tag.java: glob:pr-436-*
 spec:
   releaseName: ia-case-api
   rollback:
@@ -20,7 +20,7 @@ spec:
     java:
       replicas: 2
       useInterpodAntiAffinity: true
-      image: hmctspublic.azurecr.io/ia/case-api:prod-adceea12
+      image: hmctspublic.azurecr.io/ia/case-api:pr-436-3498da1a
       ingressHost: ia-case-api-demo.service.core-compute-demo.internal
       environment:
         RESTART_ME: "Update due to vault Change"
