--- a/k8s/namespaces/monitoring/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/prom-operator.yaml
@@ -78,6 +78,7 @@ spec:
         global:
           resolve_timeout: "5m"
         route:
+          receiver: slack_alerting  # default receiver
           group_by:
             - alertname
             - cluster
@@ -85,17 +86,10 @@ spec:
           group_wait: "30s"
           group_interval: "5m"
           repeat_interval: "2h"
-          receiver: slack_alerting  # default receiver
           routes:
-            # - match:
-            #     alertname: Watchdog
-            #     receiver: "null"
-            # - match:
-            #     severity: warning
-            #     receiver: "null"
-            - match:
+            - receiver: slack_critical
+              match:
                 severity: critical
-                receiver: slack_critical
         # Mute any warning-level notifications if the same alert is already critical.
         inhibit_rules:
           - source_match:
