Added a build monitor dashboard for UCMC + updated slack channels

--- a/k8s/aat/common/ucmc/namespace.yaml
+++ b/k8s/aat/common/ucmc/namespace.yaml
@@ -3,6 +3,6 @@ kind: Namespace
 metadata:
   name: ucmc
   labels:
-    slackChannel: civil_unspecified_dev
+    slackChannel: ucmc_dev
     hmcts.github.com/envInjector: enabled
 ---
