--- a/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
@@ -224,6 +224,12 @@ spec:
                     name: Evidence
                     recurse: true
                     title: Evidence Management
+                - buildMonitor:
+                    includeRegex: >-
+                      ^HMCTS_.*UCMC.*\/.+\/master
+                    name: UCMC
+                    recurse: true
+                    title: UCMC Data Dashboard
           authentication: |
             jenkins:
               securityRealm:
