FPLA - enable testing support on aat and demo

--- a/k8s/demo/common/family-public-law/fpl-case-service.yaml
+++ b/k8s/demo/common/family-public-law/fpl-case-service.yaml
@@ -25,6 +25,7 @@ spec:
       environment:
         GATEWAY_URL: https://gateway-ccd.demo.platform.hmcts.net
         AUTH_IDAM_CLIENT_BASEURL: https://idam-api.demo.platform.hmcts.net
+        TESTING_SUPPORT_ENABLED: true
       aadIdentityName: family-public-law
     global:
       environment: demo
