--- a/k8s/aat/common/family-public-law/fpl-case-service.yaml
+++ b/k8s/aat/common/family-public-law/fpl-case-service.yaml
@@ -30,6 +30,7 @@ spec:
         GATEWAY_URL: https://gateway-ccd.aat.platform.hmcts.net
         AUTH_IDAM_CLIENT_BASEURL: https://idam-api.aat.platform.hmcts.net
         SPRING_SECURITY_ENABLED: false
+        TESTING_SUPPORT_ENABLED: true
     global:
       environment: aat
       subscriptionId: "1c4f0704-a29e-403d-b719-b90c34ef14c9"
