--- a/k8s/perftest/common/sscs/sscs-tya-notif.yaml
+++ b/k8s/perftest/common/sscs/sscs-tya-notif.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/sscs/tya-notif:prod-1cefe856
+      environment:
+        TEST_PROPERTY: true
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
