Move alertmanager nodelocaldns rules perftest00

--- a/k8s/namespaces/monitoring/patches/perftest/cluster-01/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/perftest/cluster-01/prom-operator.yaml
@@ -10,14 +10,14 @@ spec:
       ingress:
         hosts:
           - prometheus-01.perftest.platform.hmcts.net
+      prometheusSpec:
+        configMaps:
+          - prometheus-prom-operator-prometheus-o-prometheus-rulefiles-nodelocaldns
 
     alertmanager:
       ingress:
         hosts:
           - alertmanager-01.perftest.platform.hmcts.net
-      alertmanagerSpec:
-        configMaps:
-          - prometheus-prom-operator-prometheus-o-prometheus-rulefiles-nodelocaldns
       config:
         receivers:
           - name: "slack_alerting"
