--- a/k8s/namespaces/monitoring/patches/mgmt-sandbox/cluster-00/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/mgmt-sandbox/cluster-00/prom-operator.yaml
@@ -36,17 +36,17 @@ spec:
       additionalDataSources:
         - name: prometheus-00
           type: prometheus
-          url: https://prometheus-00.sandbox.platform.hmcts.net
+          url: http://prometheus-00.sandbox.platform.hmcts.net
           access: proxy
         - name: prometheus-01
           type: prometheus
-          url: https://prometheus-01.sandbox.platform.hmcts.net
+          url: http://prometheus-01.sandbox.platform.hmcts.net
           access: proxy
         - name: alertmanager-00
           type: camptocamp-prometheus-alertmanager-datasource
-          url: https://alertmanager-00.sandbox.platform.hmcts.net
+          url: http://alertmanager-00.sandbox.platform.hmcts.net
           access: proxy
         - name: alertmanager-01
           type: camptocamp-prometheus-alertmanager-datasource
-          url: https://alertmanager-01.sandbox.platform.hmcts.net
+          url: http://alertmanager-01.sandbox.platform.hmcts.net
           access: proxy
