--- a/k8s/prod/common/dg/dg-docassembly.yaml
+++ b/k8s/prod/common/dg/dg-docassembly.yaml
@@ -28,7 +28,8 @@ spec:
       image: hmctspublic.azurecr.io/dg/docassembly:prod-3bcce7eb
       environment:
         DOCMOSIS_TEMPLATES_ENDPOINT: "https://docmosis.platform.hmcts.net"
-        DOCMOSIS_ENDPOINT: "https://docmosis.platform.hmcts.net/rs/render"
+        DOCMOSIS_CONVERT_ENDPOINT: "https://docmosis.platform.hmcts.net/rs/convert"
+        DOCMOSIS_RENDER_ENDPOINT: "https://docmosis.platform.hmcts.net/rs/render"
         ENABLE_FORM_DEFINITION_ENDPOINT: "false"
         ENABLE_TEMPLATE_RENDITION_ENDPOINT: "true"
         IDAM_API_BASE_URI: "https://idam-api.platform.hmcts.net"
