--- a/k8s/preview/cluster-01-overlay/kustomization.yaml
+++ b/k8s/preview/cluster-01-overlay/kustomization.yaml
@@ -5,6 +5,7 @@ bases:
   - ../../namespaces/admin/kube-slack
   - ../../namespaces/admin/keyvault-flexvol
   - ../../namespaces/admin/traefik
+  - ../../namespaces/kube-system/nodelocaldns
   - ../../namespaces/kured
   - ../../namespaces/osba
   - ../../namespaces/monitoring
