--- a/k8s/prod/cluster-01-overlay/kustomization.yaml
+++ b/k8s/prod/cluster-01-overlay/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
   - ../../namespaces/admin/keyvault-flexvol
   - ../../namespaces/admin/node-problem-detector
   - ../../namespaces/admin/traefik
+  - ../../namespaces/kube-system/nodelocaldns
   - ../../namespaces/kured
   - ../../namespaces/neuvector
   - ../../namespaces/monitoring
