--- a/k8s/sandbox/cluster-01-overlay/kustomization.yaml
+++ b/k8s/sandbox/cluster-01-overlay/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
   - ../../namespaces/admin/keyvault-flexvol
   - ../../namespaces/admin/traefik
   - ../../namespaces/admin/node-problem-detector
+  - ../../namespaces/kube-system/nodelocaldns
   - ../../namespaces/kured
   - ../../namespaces/monitoring
   - ../../namespaces/admin/env-injector
