--- a/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
@@ -23,7 +23,7 @@ spec:
         -Dhudson.model.DirectoryBrowserSupport.CSP="default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self'; img-src 'self'"
 
       ingress:
-        hostName: sandbox-build-beta.platform.hmcts.net
+        hostName: sandbox-build.platform.hmcts.net
       containerEnv:
         - name: ENVIRONMENT
           value: "sandbox"
