--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -22,7 +22,7 @@ spec:
       # Used for label app.kubernetes.io/component
       componentName: "jenkins-master"
       image: "hmctspublic.azurecr.io/jenkins"
-      imageTag: "db4228"
+      imageTag: "db4fxf"
       imagePullPolicy: "IfNotPresent"
       podLabels:
         aadpodidbinding: jenkins
