fix build-beta url

--- a/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/mgmt-sandbox/cluster-00/jenkins.yaml
@@ -101,7 +101,7 @@ spec:
             unclassified:
               location:
                 adminAddress: jenkins-reform@hmcts.net
-                url: 'https://sandbox-build-beta.platform.hmcts.net'
+                url: 'https://sandbox-build.platform.hmcts.net'
           azure-key-vault: |
             unclassified:
               azureKeyVault:
