Add alertmanager null receiver

--- a/k8s/namespaces/monitoring/patches/aat/cluster-01/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/aat/cluster-01/prom-operator.yaml
@@ -30,3 +30,4 @@ spec:
               - channel: prometheus-critical
                 title: 'AAT-01 - {{ template "slack.default.title" . }}'
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+          - name: "null"
