--- a/k8s/namespaces/monitoring/patches/perftest/cluster-00/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/perftest/cluster-00/prom-operator.yaml
@@ -30,3 +30,4 @@ spec:
               - channel: prometheus-critical
                 title: 'Perftest-00 - {{ template "slack.default.title" . }}'
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+          - name: "null"
