--- a/k8s/ithc/cluster-00/em/em-icp.yaml
+++ b/k8s/ithc/cluster-00/em/em-icp.yaml
@@ -5,7 +5,7 @@ metadata:
   name: em-icp
   namespace: em
   annotations:
-    flux.weave.works/automated: "true"
+    flux.weave.works/automated: "false"
     flux.weave.works/tag.nodejs: glob:prod-*
 spec:
   releaseName: em-icp
