Add alertmanager null receiver prod

--- a/k8s/namespaces/monitoring/patches/cftptl/cluster-00/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/cftptl/cluster-00/prom-operator.yaml
@@ -27,6 +27,7 @@ spec:
               - channel: prometheus-critical
                 title: 'CFTPTL - {{ template "slack.default.title" . }}'
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+          - name: "null"
 
     grafana:
       enabled: true
