--- a/k8s/demo/common/xui/webapp.yaml
+++ b/k8s/demo/common/xui/webapp.yaml
@@ -22,6 +22,8 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/xui/webapp:prod-1ce197af
       ingressHost: manage-case.demo.platform.hmcts.net
+      environment:
+        DUMMY_VAR: true
     global:
       environment: demo
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
