--- a/k8s/perftest/common/ccpay/ccpay-bubble-frontend.yaml
+++ b/k8s/perftest/common/ccpay/ccpay-bubble-frontend.yaml
@@ -21,6 +21,8 @@ spec:
       replicas: 2
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/ccpay/bubble-frontend:prod-6c891e5b
+      environment:
+        DUMMY_RESTART_VAR: true
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
