IA timed-event-service prod (#3865)

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -87,7 +87,7 @@ k8s/**/common/ia/case-notifications-api.yaml @hmcts/immigration-asylum
 k8s/**/common/ia/aip-frontend.yaml @hmcts/immigration-asylum
 k8s/aat/common/ia/home-office-integration-api.yaml @hmcts/immigration-asylum
 k8s/aat/common/ia/home-office-mock-api.yaml @hmcts/immigration-asylum
-k8s/aat/common/ia/timed-event-service.yaml @hmcts/immigration-asylum
+k8s/**/common/ia/timed-event-service.yaml @hmcts/immigration-asylum
 k8s/aat/common/ia/case-payments-api.yaml @hmcts/immigration-asylum
 
 ## Divorce
