--- a/k8s/aat/common/em/em-showcase.yaml
+++ b/k8s/aat/common/em/em-showcase.yaml
@@ -5,7 +5,7 @@ metadata:
   name: em-showcase
   namespace: em
   annotations:
-    flux.weave.works/automated: "false"
+    flux.weave.works/automated: "true"
     flux.weave.works/tag.nodejs: glob:aat-*
 spec:
   releaseName: em-showcase
@@ -15,7 +15,7 @@ spec:
   chart:
     repository: https://hmctspublic.azurecr.io/helm/v1/repo/
     name: em-showcase
-    version: 1.1.7
+    version: 1.1.8
   values:
     nodejs:
       replicas: 2
