--- a/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
+++ b/k8s/namespaces/jenkins/patches/cftptl/cluster-00/jenkins.yaml
@@ -8,7 +8,7 @@ spec:
   values:
     master:
       ingress:
-        hostName: build-beta.platform.hmcts.net
+        hostName: build.platform.hmcts.net
       containerEnv:
         - name: ENVIRONMENT
           value: "prod"
@@ -239,7 +239,7 @@ spec:
                   groupsAttributeName: "http://schemas.microsoft.com/ws/2008/06/identity/claims/groups"
                   idpMetadataConfiguration:
                     period: 15
-                    url: https://login.microsoftonline.com/531ff96d-0ae9-462a-8d2d-bec7c0b42082/federationmetadata/2007-06/federationmetadata.xml?appid=f51ea833-3992-44a6-899e-16257b3e4fd1
+                    url: https://login.microsoftonline.com/531ff96d-0ae9-462a-8d2d-bec7c0b42082/federationmetadata/2007-06/federationmetadata.xml?appid=b2391616-ba63-4676-ad17-0d8fa49c4f44
                   maximumAuthenticationLifetime: 7862400
                   usernameAttributeName: "http://schemas.xmlsoap.org/ws/2005/05/identity/claims/name"
                   usernameCaseConversion: "none"
@@ -247,7 +247,7 @@ spec:
             unclassified:
               location:
                 adminAddress: jenkins-reform@hmcts.net
-                url: 'https://build-beta.platform.hmcts.net'
+                url: 'https://build.platform.hmcts.net'
           azure-key-vault: |
             unclassified:
               azureKeyVault:
