--- a/k8s/perftest/cluster-01-overlay/kustomization.yaml
+++ b/k8s/perftest/cluster-01-overlay/kustomization.yaml
@@ -36,5 +36,6 @@ patchesStrategicMerge:
 
   #prom-operator patch
   - ../../namespaces/monitoring/patches/perftest/cluster-01/prom-operator.yaml
+  - ../../namespaces/monitoring/patches/perftest/cluster-01/nodelocaldns-alerts-rules.yaml
 
   - ../../namespaces/admin/env-injector/patches/perftest/cluster-01/env-injector.yaml
