Add nodelocaldns alertmanager rules to all envs

--- a/k8s/aat/cluster-01-overlay/kustomization.yaml
+++ b/k8s/aat/cluster-01-overlay/kustomization.yaml
@@ -39,6 +39,7 @@ patchesStrategicMerge:
 
   #prom-operator patch
   - ../../namespaces/monitoring/patches/aat/cluster-01/prom-operator.yaml
+  - ../../namespaces/monitoring/patches/aat/cluster-01/nodelocaldns-alerts-rules.yaml
 
   - ../../namespaces/admin/env-injector/patches/aat/cluster-01/env-injector.yaml
 
