--- a/k8s/sandbox/cluster-00-overlay/kustomization.yaml
+++ b/k8s/sandbox/cluster-00-overlay/kustomization.yaml
@@ -30,5 +30,6 @@ patchesStrategicMerge:
 
   #prom-operator patch
   - ../../namespaces/monitoring/patches/sandbox/cluster-00/prom-operator.yaml
+  - ../../namespaces/monitoring/patches/sandbox/cluster-00/nodelocaldns-alerts-rules.yaml
 
   - ../../namespaces/admin/env-injector/patches/sandbox/cluster-00/env-injector.yaml
