--- a/k8s/cftptl/cluster-00-overlay/kustomization.yaml
+++ b/k8s/cftptl/cluster-00-overlay/kustomization.yaml
@@ -37,6 +37,7 @@ patchesStrategicMerge:
 
   #prom-operator patch
   - ../../namespaces/monitoring/patches/cftptl/cluster-00/prom-operator.yaml
+  - ../../namespaces/monitoring/patches/cftptl/cluster-00/nodelocaldns-alerts-rules.yaml
 
   - ../../namespaces/admin/env-injector/patches/cftptl/cluster-00/env-injector.yaml
 
