--- a/k8s/prod/cluster-00-overlay/kustomization.yaml
+++ b/k8s/prod/cluster-00-overlay/kustomization.yaml
@@ -39,6 +39,7 @@ patchesStrategicMerge:
 
   # prom-operator patch
   - ../../namespaces/monitoring/patches/prod/cluster-00/prom-operator.yaml
+  - ../../namespaces/monitoring/patches/prod/cluster-00/nodelocaldns-alerts-rules.yaml
 
   - ../../namespaces/admin/env-injector/patches/prod/cluster-00/env-injector.yaml
 
