--- a/k8s/sandbox/cluster-01-overlay/kustomization.yaml
+++ b/k8s/sandbox/cluster-01-overlay/kustomization.yaml
@@ -32,6 +32,7 @@ patchesStrategicMerge:
 
   #prom-operator patch
   - ../../namespaces/monitoring/patches/sandbox/cluster-01/prom-operator.yaml
+  - ../../namespaces/monitoring/patches/sandbox/cluster-01/nodelocaldns-alerts-rules.yaml
 
   - ../../namespaces/admin/env-injector/patches/sandbox/cluster-01/env-injector.yaml
 
