--- a/k8s/namespaces/monitoring/patches/prod/cluster-00/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/patches/prod/cluster-00/prom-operator.yaml
@@ -25,9 +25,11 @@ spec:
               - channel: prometheus-alerting-prod
                 title: 'Prod-00 - {{ template "slack.default.title" . }}'
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+                send_resolved: true
           - name: "slack_critical"
             slack_configs:
               - channel: prometheus-critical-prod
                 title: 'Prod-00 - {{ template "slack.default.title" . }}'
                 text: "{{ range .Alerts }}{{ .Annotations.message }}\n{{ end }}"
+                send_resolved: true
           - name: "null"
