--- a/k8s/namespaces/jenkins/jenkins.yaml
+++ b/k8s/namespaces/jenkins/jenkins.yaml
@@ -510,6 +510,11 @@ spec:
                           id: "hmcts-jenkins-rse"
                           privateKey: "${hmcts-jenkins-rse-ghapp}"
                       - gitHubApp:
+                          appID: "68302"
+                          description: "GitHub APP Key - ucmc"
+                          id: "hmcts-jenkins-ucmc"
+                          privateKey: "${hmcts-jenkins-ucmc-ghapp}"
+                      - gitHubApp:
                           appID: "62005"
                           description: "GitHub APP Key - em"
                           id: "hmcts-jenkins-em"
