Update alertmanager suppressions

--- a/k8s/namespaces/monitoring/prom-operator.yaml
+++ b/k8s/namespaces/monitoring/prom-operator.yaml
@@ -92,7 +92,7 @@ spec:
                 severity: critical
             - receiver: "null"
               match_re:
-                alertname: ^.*(KubeletDown|KubeControllerManagerDown|KubeSchedulerDown).*$
+                message: (Kubelet|KubeControllerManager|KubeScheduler) has disappeared
         # Mute any warning-level notifications if the same alert is already critical.
         inhibit_rules:
           - source_match:
