--- a/k8s/perftest/common/sscs/sscs-evidence-share.yaml
+++ b/k8s/perftest/common/sscs/sscs-evidence-share.yaml
@@ -23,6 +23,7 @@ spec:
       image: hmctspublic.azurecr.io/sscs/evidence-share:prod-ade0644b
       environment:
         BULK_SCAN_MIGRATED: false
+        TEST_PROPERTY: true
     global:
       environment: perftest
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
