preserve redirect path

--- a/k8s/mgmt-sandbox/common/jenkins/sandbox-beta-ingress.yaml
+++ b/k8s/mgmt-sandbox/common/jenkins/sandbox-beta-ingress.yaml
@@ -7,7 +7,7 @@ metadata:
     kubernetes.io/ingress.class: traefik
     traefik.ingress.kubernetes.io/redirect-permanent: "true"
     traefik.ingress.kubernetes.io/redirect-regex: ^https://sandbox-build-beta.platform.hmcts.net/(.*)
-    traefik.ingress.kubernetes.io/redirect-replacement: https://sandbox-build.platform.hmcts.net
+    traefik.ingress.kubernetes.io/redirect-replacement: https://sandbox-build.platform.hmcts.net/$1
   name: build-beta-ingress
   namespace: jenkins
 spec:
