--- a/k8s/aat/common/ccd/definition-store-api.yaml
+++ b/k8s/aat/common/ccd/definition-store-api.yaml
@@ -22,7 +22,7 @@ spec:
       useInterpodAntiAffinity: true
       image: hmctspublic.azurecr.io/ccd/definition-store-api:prod-e19c9f21
       environment:
-        ELASTIC_SEARCH_FAIL_ON_IMPORT: true
+        ELASTIC_SEARCH_FAIL_ON_IMPORT: false
     global:
       environment: aat
       tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
