--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -270,4 +270,6 @@ k8s/aat/common/rse/check.yaml @hmcts/rse
 ### UCMC
 k8s/**/common/ucmc/namespace.yaml @hmcts/ucmc-admins
 k8s/aat/common/ucmc/ucmc-service.yaml @hmcts/ucmc-admins
+k8s/aat/common/ucmc/identity.yaml @hmcts/ucmc-admins
 k8s/demo/common/ucmc/ucmc-service.yaml @hmcts/ucmc-admins
+k8s/demo/common/ucmc/identity.yaml @hmcts/ucmc-admins
