Run awaiting conditional order job every 10 minutes on AAT cluster (#10407)

--- a/k8s/namespaces/nfdiv/nfdiv-case-api/nfdiv-case-api.yaml
+++ b/k8s/namespaces/nfdiv/nfdiv-case-api/nfdiv-case-api.yaml
@@ -15,3 +15,4 @@ spec:
       image: hmctspublic.azurecr.io/nfdiv/case-api:prod-1fa9ead-20210709123707
       environment:
         VAR_TA: trigger13
+        AWAITING_CONDITIONAL_ORDER_SCHEDULED_CRON: 0 0/10 * * * ?
