--- a/k8s/namespaces/wa/wa-task-batch-ad-hoc-delete-process-instances/wa-task-batch-ad-hoc-delete-process-instances.yaml
+++ b/k8s/namespaces/wa/wa-task-batch-ad-hoc-delete-process-instances/wa-task-batch-ad-hoc-delete-process-instances.yaml
@@ -15,5 +15,8 @@ spec:
       environment:
         JOB_NAME: AD_HOC_DELETE_PROCESS_INSTANCES
     global:
+      environment: aat
+      tenantId: "531ff96d-0ae9-462a-8d2d-bec7c0b42082"
+      enableKeyVaults: true
       jobKind: Job
 
