--- a/clusters/sbox-intsvc/base/kustomization.yaml
+++ b/clusters/sbox-intsvc/base/kustomization.yaml
@@ -10,3 +10,4 @@ resources:
 - ../../../apps/vsts/base/kustomize.yaml
 - ../../../apps/backstage/base/kustomize.yaml
 - ../../../apps/pact-broker/base/kustomize.yaml
+- ../../../apps/jenkins/pact-broker/base/kustomize.yaml
