disable flux env substitute

--- a/apps/jenkins/jenkins/jenkins.yaml
+++ b/apps/jenkins/jenkins/jenkins.yaml
@@ -3,6 +3,8 @@ kind: HelmRelease
 metadata:
   name: jenkins
   namespace: jenkins
+  annotations:
+    kustomize.toolkit.fluxcd.io/substitute: disabled
 spec:
   releaseName: jenkins
   values:
