fix backstage helm chart url

--- a/apps/backstage/backstage/backstage-helmrepo.yaml
+++ b/apps/backstage/backstage/backstage-helmrepo.yaml
@@ -4,5 +4,5 @@ metadata:
   name: backstage
   namespace: backstage
 spec:
-  url: https://hmcts/github.io/RoadieHQ-helm-charts
+  url: https://github.io/RoadieHQ-helm-charts
   interval: 10m
