--- a/k8s/namespaces/fees-pay/ccpay-refunds-api/demo.yaml
+++ b/k8s/namespaces/fees-pay/ccpay-refunds-api/demo.yaml
@@ -5,6 +5,6 @@ metadata:
 spec:
   values:
     java:
-      ingressClass: traefik-no-proxy
+      ingressClass: traefik
       environment:
         DUMMY_VARIABLE: true
