Remove replicas from demo and add in perftest

--- a/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
+++ b/k8s/namespaces/am/am-role-assignment-service/perftest.yaml
@@ -5,6 +5,7 @@ metadata:
 spec:
   values:
     java:
+      replicas: 9
       environment:
         AM_INFO: true
         APPLICATION_LOGGING_LEVEL: INFO
