--- a/apps/response/base/kustomize.yaml
+++ b/apps/response/base/kustomize.yaml
@@ -11,7 +11,7 @@ spec:
     name: flux-config
     namespace: flux-system
   validation: none
-  path: ./apps/slack-help-bot/${ENVIRONMENT}/base
+  path: ./apps/response/${ENVIRONMENT}/base
   postBuild:
     substitute:
       NAMESPACE: "response"
