set prod and default batch size

--- a/k8s/namespaces/em/em-hrs-ingestor/em-hrs-ingestor.yaml
+++ b/k8s/namespaces/em/em-hrs-ingestor/em-hrs-ingestor.yaml
@@ -20,3 +20,4 @@ spec:
       image: hmctspublic.azurecr.io/em/hrs-ingestor:prod-a72336a-20210714104000
       environment:
         DUMMYDEPLOY: jul02-1241
+        MAX_FILES_TO_PROCESS: 20
