--- a/k8s/namespaces/em/em-hrs-ingestor/prod-common.yaml
+++ b/k8s/namespaces/em/em-hrs-ingestor/prod-common.yaml
@@ -9,3 +9,4 @@ spec:
         IDAM_API_BASE_URI: "https://idam-api.platform.hmcts.net"
         OPEN_ID_API_BASE_URI: "https://hmcts-access.service.gov.uk/o"
         ENABLE_CRONJOB: false
+        MAX_FILES_TO_PROCESS: 10
