--- a/k8s/namespaces/em/em-hrs-api/em-hrs-api.yaml
+++ b/k8s/namespaces/em/em-hrs-api/em-hrs-api.yaml
@@ -18,4 +18,4 @@ spec:
       cpuLimits: "2000m"
       image: hmctspublic.azurecr.io/em/hrs-api:prod-4cee00e-20210708160753
       environment:
-        TEST: "REFRESHJun14"
+        TEST: "REFRESHJul14"
