set to every hour to test connectivity

--- a/k8s/namespaces/em/em-hrs-ingestor/prod-1.yaml
+++ b/k8s/namespaces/em/em-hrs-ingestor/prod-1.yaml
@@ -6,5 +6,7 @@ metadata:
 spec:
   values:
     job:
-      schedule: "45 0-5,20-23 * * *"
+      schedule: "44 * * * *"
+      #temp schedule to prove connectivity, on the 45 minutes past
+      #schedule: "30 0-5,20-23 * * *"
       # Run every hour at 30 mins past, during the evening 9pm through 6am
