hrs ingestor schedule to be overnight with initial batch of 500 per half hour

--- a/k8s/namespaces/em/em-hrs-ingestor/prod-0.yaml
+++ b/k8s/namespaces/em/em-hrs-ingestor/prod-0.yaml
@@ -6,7 +6,5 @@ metadata:
 spec:
   values:
     job:
-      schedule: "00 * * * *"
-      #temp schedule to prove connectivity, on the hour
-      #schedule: "00 0-6,20-23 * * *"
-      # Run every hour, during the evening 9pm through 6am
+      schedule: "00 0-6,20-23 * * *"
+      # Run every hour, during the evening 8pm through 6am GMT (BST = 9pm thru 7am)
