--- a/k8s/demo/cluster-00/fees-pay/pba-payment-job.yaml
+++ b/k8s/demo/cluster-00/fees-pay/pba-payment-job.yaml
@@ -19,7 +19,7 @@ spec:
   values:
     job:
       image: "hmctspublic.azurecr.io/payment/jobs:prod-eac66225"
-      schedule: "30 2 * * *"
+      schedule: "0 0/5 0 ? * * *"
       environment:
         REPORT_NAME: pba-csv-report
     global:
