--- a/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
@@ -43,10 +43,10 @@ spec:
           TEST_S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
           TEST_SCAN_DELAY: "4000"
       smoketests:
-        enabled: true
+        enabled: false
         image: hmctspublic.azurecr.io/bulk-scan/sample-app-test:prod-07d2f5d-20210629091508
       functionaltests:
-        enabled: true
+        enabled: false
         image: hmctspublic.azurecr.io/bulk-scan/sample-app-test:prod-07d2f5d-20210629091508
     global:
       environment: aat
