--- a/k8s/ithc/common/money-claims/claim-store.yaml
+++ b/k8s/ithc/common/money-claims/claim-store.yaml
@@ -27,6 +27,7 @@ spec:
           secrets:
             - AppInsightsInstrumentationKey
             - citizen-oauth-client-secret
+            - cmc-db-password
             - claim-store-s2s-secret
             - anonymous-caseworker-username
             - anonymous-caseworker-password
