--- a/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
@@ -43,10 +43,10 @@ spec:
           TEST_S2S_URL: "http://rpe-service-auth-provider-aat.service.core-compute-aat.internal"
           TEST_SCAN_DELAY: "4000"
       smoketests:
-        enabled: false
+        enabled: true
         image: hmctspublic.azurecr.io/bulk-scan/sample-app-test:prod-dd27a4d-20210719105517
       functionaltests:
-        enabled: false
+        enabled: true
         image: hmctspublic.azurecr.io/bulk-scan/sample-app-test:prod-dd27a4d-20210719105517
     global:
       environment: aat
