increase sync-timeout to address context deadline exceeded issues

--- a/k8s/namespaces/admin/flux/flux.yaml
+++ b/k8s/namespaces/admin/flux/flux.yaml
@@ -33,6 +33,7 @@ spec:
     additionalArgs:
       - --connect=ws://fluxcloud
       - --manifest-generation=true
+      - --sync-timeout=10m
     resources:
       limits:
         cpu: 1000m
