Add image automation registry creds and automation for backstage (#10573)

--- a/apps/flux-system/ptl-intsvc/base/kustomization.yaml
+++ b/apps/flux-system/ptl-intsvc/base/kustomization.yaml
@@ -1,7 +1,13 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: flux-system
 resources:
   - ../../base
   - ../../base/image-automation-components.yaml
   - ../../base/image-update-automation.yaml
   - git-credentials.yaml
+  - https://github.com/fluxcd/flux2/manifests/integrations/registry-credentials-sync/azure?ref=main
+  - ../../backstage/automation
+
+patchesStrategicMerge:
+  - config-patches.yaml
