CCD-1318 Updated following review comments

--- a/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
+++ b/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
@@ -99,14 +99,14 @@ spec:
                     title: RPX-PR
                 - buildMonitor:
                     includeRegex: >-
-                      ^HMCTS_.*CDM.*\/(?!.*ccd-admin-web-api|.HMCTS_Nightly.*CDM.*).+\/master
+                      ^HMCTS_.*CDM.*\/(?!.*ccd-admin-web-api|^HMCTS_Nightly.*CDM.*).+\/master
                     name: CDM
                     recurse: true
-                    title: CDM Builds Dashboard
+                    title: CDM Master Builds Dashboard
                 - buildMonitor:
                     includeRegex: >-
                       ^HMCTS_Nightly.*CDM.*\/(?!.*ccd-admin-web-api).+\/master
-                    name: CDM-Nightly
+                    name: CDM Nightly
                     recurse: true
                     title: CDM Nightly Builds Dashboard
                 - buildMonitor:
