DTSBPS-683 fix vault config

--- a/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
@@ -34,7 +34,8 @@ spec:
           bulk-scan:
             resourceGroup: bulk-scan
             secrets:
-              sample-app-s2s-secret: TEST_S2S_SECRET
+              - name: sample-app-s2s-secret
+                alias: TEST_S2S_SECRET
         environment:
           TEST_URL: "http://bulk-scan-sample-app-aat.service.core-compute-aat.internal"
           SLACK_CHANNEL: "bsp-test-notices"
