--- a/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
@@ -31,8 +31,7 @@ spec:
       testsConfig:
         serviceAccountName: tests-service-account
         keyVaults:
-          bulk-scan:
-            resourceGroup: bulk-scan
+          "bulk-scan":
             secrets:
               - name: sample-app-s2s-secret
                 alias: TEST_S2S_SECRET
