--- a/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
+++ b/k8s/aat/common/bsp/bulk-scan-sample-app.yaml
@@ -31,9 +31,9 @@ spec:
       testsConfig:
         serviceAccountName: tests-service-account
         keyVaults:
-          "bulk-scan":
+          bulk-scan:
             secrets:
-            - name: sample-app-s2s-secret
+            - name: ample-app-s2s-secret
               alias: TEST_S2S_SECRET
         environment:
           TEST_URL: "http://bulk-scan-sample-app-aat.service.core-compute-aat.internal"
