DTSPB-2886 changed pr pointing

--- a/k8s/namespaces/probate/probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
+++ b/k8s/namespaces/probate/probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
@@ -10,7 +10,7 @@ spec:
     path: probate-cron
   values:
     job:
-      image: hmctspublic.azurecr.io/probate/back-office:prod-7c60114-20220816141606 #{"$imagepolicy": "flux-system:demo-probate-back-office"}
+      image: hmctspublic.azurecr.io/probate/back-office:prod-7c60114-20220816141606 #{"$imagepolicy": "flux-system:probate-back-office"}
       environment:
         TASK_NAME: MakeDormantCasesTask
       schedule: 0/10 * * * *
