DTSPB-2886 Changed schedule time

--- a/k8s/namespaces/probate/probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
+++ b/k8s/namespaces/probate/probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
@@ -13,4 +13,4 @@ spec:
       image: hmctspublic.azurecr.io/probate/back-office:prod-6e7eee4-20220818132310 #{"$imagepolicy": "flux-system:probate-back-office"}
       environment:
         TASK_NAME: MakeDormantCasesTask
-      schedule: 0/10 * * * *
+      schedule: 0 * * * *
