Probate dormant cases crons move to FluxV2

--- a/apps/probate/demo/base/kustomization.yaml
+++ b/apps/probate/demo/base/kustomization.yaml
@@ -5,4 +5,4 @@ resources:
   - ../../probate-cron-make-dormant-cases/probate-cron-make-dormant-cases.yaml
   - ../../probate-cron-reactivate-dormant-cases/probate-cron-reactivate-dormant-cases.yaml
 patchesStrategicMerge:
-  - ../../identity/aat.yaml
+  - ../../identity/demo.yaml
