Enable timeout on preview traefik

--- a/apps/admin/traefik2/preview/00.yaml
+++ b/apps/admin/traefik2/preview/00.yaml
@@ -8,3 +8,10 @@ spec:
     service:
       spec:
         loadBalancerIP: "10.101.159.250"
+    additionalArguments:
+      - "--entryPoints.web.forwardedHeaders.insecure=true"
+      - "--entryPoints.websecure.forwardedHeaders.insecure=true"
+      - "--entryPoints.web.transport.respondingTimeouts.writeTimeout=30"
+      - "--entryPoints.websecure.transport.respondingTimeouts.writeTimeout=30"
+      - "--entryPoints.web.transport.respondingTimeouts.readTimeout=30"
+      - "--entryPoints.websecure.transport.respondingTimeouts.readTimeout=30"
