Add traefik timeout across all envs

--- a/apps/admin/traefik2/traefik2.yaml
+++ b/apps/admin/traefik2/traefik2.yaml
@@ -39,6 +39,10 @@ spec:
     additionalArguments:
       - "--entryPoints.web.forwardedHeaders.insecure=true"
       - "--entryPoints.websecure.forwardedHeaders.insecure=true"
+      - "--entryPoints.web.transport.respondingTimeouts.writeTimeout=30"
+      - "--entryPoints.websecure.transport.respondingTimeouts.writeTimeout=30"
+      - "--entryPoints.web.transport.respondingTimeouts.readTimeout=30"
+      - "--entryPoints.websecure.transport.respondingTimeouts.readTimeout=30"
     service:
       annotations:
         service.beta.kubernetes.io/azure-load-balancer-internal: "true"
