--- a/apps/admin/traefik2/sbox-intsvc/00.yaml
+++ b/apps/admin/traefik2/sbox-intsvc/00.yaml
@@ -9,5 +9,5 @@ spec:
       spec:
         loadBalancerIP: "10.70.25.250"
     additionalArguments:
-      - "--entryPoints.web.forwardedHeaders.insecure=false"
+      - "--entryPoints.web.forwardedHeaders.insecure=true"
       - "--entryPoints.websecure.forwardedHeaders.insecure=true"
