Updating fis aat identity

--- a/k8s/perftest/common/fis/identity.yaml
+++ b/k8s/perftest/common/fis/identity.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: fis
 spec:
   type: 0
-  resourceID: 
-  clientID: 
+  resourceID: "/subscriptions/7a4e3bd5-ae3a-4d0c-b441-2188fee3ff1c/resourcegroups/managed-identities-perftest-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/fis-perftest-mi"
+  clientID: "deace2ad-62c3-4d56-9efb-08b6503f3f2e"
 
 ---
 
