ISDB-369: Flux cnp config for new service fis-hmc-api

--- a/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
+++ b/apps/jenkins/jenkins/ptl-intsvc/jenkins.yaml
@@ -328,7 +328,7 @@ spec:
                     title: Employment Tribunals
                 - buildMonitor:
                     includeRegex: >-
-                      ^HMCTS.*\/(fis-ds-web|fis-bulk-scan-api|family-api-gateway|fis-ds-update-web)\/master
+                      ^HMCTS.*\/(fis-hmc-api|fis-ds-web|fis-bulk-scan-api|family-api-gateway|fis-ds-update-web)\/master
                     name: FIS
                     recurse: true
                     title: Family Integration
